[package]
name = "example-crypto-hash-function-useage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# belt hash function
belt-hash = "0.1.0"
# blake2 hash function
blake2 = "0.10.6"
fsb = "0.1.3"
# fsb hash function
hex = "0.4.3"
hex-literal = "0.3.4"
