[package]
name = "router"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
lipsum = "0.8"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }
wasm-logger = "0.2"
yew = { git = "https://github.com/yewstack/yew.git", branch = "master" }
yew-router = { git = "https://github.com/yewstack/yew.git", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
gloo-timers = "0.2"
#reqwest = { version = "0.10.0-alpha.0", default-features = false, features = ["blocking"] }
reqwest = { version = "0.11" }
feed-rs = "1.0.0"
html_parser = "0.6.2"
uuid = { version = "0.8", features = ["wasm-bindgen", "v4"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros", "rt-multi-thread"] }
