[package]
name = "rust-cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }


[[bin]]
name = "authentication"
path = "bin/authentication.rs"